@@ -1,0 +1,23 @@
+#!/usr/bin/python
+
+import os
+import subprocess
+import socket
+import sys
+import time
+from struct import *
+
+import mosquitto
+
+if sys.version < '2.7':
+    print("WARNING: SSL/TLS not supported on Python 2.6")
+    exit(0)
+
+rc = 1
+mosq = mosquitto.Mosquitto("08-ssl-bad-cacert")
+try:
+    mosq.tls_set("this/file/doesnt/exist")
+except IOError as err:
+    rc = 0
+
+exit(rc)
